--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-scripts",
+  "name": "velo-react-scripts",
   "version": "2.1.0",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebook/create-react-app",
